--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "diskdb": "^0.1.17",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-path": "^0.3.8",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "uuid": "^9.0.0"
   }
 }
